deployments/kanboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kanboard
  name: kanboard
  namespace: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - image: kanboard/kanboard:v1.2.18
        imagePullPolicy: Always
        name: kanboard
        ports:
          - containerPort: 80
          - containerPort: 443
