deployments/kanboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanboard-service
  namespace: kanboard
spec:
  type: ClusterIP
  selector:
    app: kanboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
